# AffectorPOP

./: CMakeLists.txt  README.md
sdk/: POP_CPlusPlusBase.h
src/: AffectorPOP.cpp  AffectorPOP.h  AffectorParams.h  kernel.cu
td/: build_dew_particles.py
